@@ -41,15 +41,21 @@ function check_email($email) {
 function emailDisclaimer() {
 	global $gallery;
 
-	$msg = unhtmlentities(sprintf(_("Note: This is an automatically generated email message sent from the %s website.  If you have received this in error, please ignore this message."),$gallery->app->photoAlbumURL).
-	  "  \r\n".
-	  sprintf(_("Report abuse to %s"),$gallery->app->adminEmail));
+	$msg = unhtmlentities(
+			sprintf(
+			  gTranslate('core', "Note: This is an automatically generated email message sent from the %s website.  If you have received this in error, please ignore this message."),
+			  $gallery->app->photoAlbumURL) .
+		   "  \r\n".
+		   sprintf(gTranslate('core', "Report abuse to %s"),$gallery->app->adminEmail)
+	);
+
 	$msg2 = sprintf("Note: This is an automatically generated email message sent from the %s website.  If you have received this in error, please ignore this message.  \r\nReport abuse to %s",
-	$gallery->app->photoAlbumURL, $gallery->app->adminEmail);
+				$gallery->app->photoAlbumURL, $gallery->app->adminEmail);
 
 	if ($msg != $msg2) {
 		return "\r\n\r\n$msg\r\n\r\n$msg2";
-	} else {
+	}
+	else {
 		return "\r\n\r\n$msg";
 	}
 }
@@ -68,25 +74,23 @@ function gallery_mail($to, $subject, $msg, $logmsg, $hide_recipients = false, $f
 	if(!is_array($to)) {
 		$to = array($to);
 	}
-	/* Begin Catch errors */
+
+	/* Begin catch errors from call */
 	if ($gallery->app->emailOn == "no") {
-		echo infoBox(array(array(
-		  'type' => 'error',
-		  'text' => gTranslate('common', "Email not sent as it is disabled for this gallery"))
-		  ));
+		echo gallery_error(gTranslate('common', "Email not sent as it is disabled for this gallery"));
 		return false;
 	}
 
 	foreach($to as $rcpnr => $mail) {
 		if (! check_email($mail)) {
-			echo "\n<br>". gallery_error(sprintf(_("Email not sent to %s as it is not a valid address"),
+			echo "\n<br>". gallery_error(sprintf(gTranslate('core', "Email not sent to %s as it is not a valid address"),
 			'<i>' . $mail . "</i>"));
 			unset ($to[$rcpnr]);
 		}
 	}
 
 	if (empty($to)) {
-		echo "\n<br>". gallery_error(_("Email not sent as no reciepient address provided"));
+		echo "\n<br>". gallery_error(gTranslate('core', "Email not sent as no reciepient address provided"));
 		return false;
 	}
 
@@ -97,12 +101,13 @@ function gallery_mail($to, $subject, $msg, $logmsg, $hide_recipients = false, $f
 
 	if (! check_email($from)) {
 		if (isDebugging() && $from) {
-			echo "\n<br>". gallery_error(sprintf(_("Sender address %s is invalid, using %s."),
+			echo "\n<br>". gallery_error(sprintf(gTranslate('core', "Sender address %s is invalid, using %s."),
 			$from, $gallery->app->senderEmail));
 		}
 		$from = $gallery->app->senderEmail;
 		$reply_to = $gallery->app->adminEmail;
-	} else {
+	}
+	else {
 		$reply_to = $from;
 	}
 
@@ -128,7 +133,7 @@ function gallery_mail($to, $subject, $msg, $logmsg, $hide_recipients = false, $f
 
 	if($isHTML) {
 		$gallery_mail->setHtmlCharset($gallery->charset);
-		$gallery_mail->setHtml($msg, _("This is a HTML mail, please have a look at the Attachment."));
+		$gallery_mail->setHtml($msg, gTranslate('core', "This is a HTML mail, please have a look at the Attachment."));
 	}
 	else {
 		$gallery_mail->setText($msg);
@@ -166,7 +171,7 @@ function gallery_mail($to, $subject, $msg, $logmsg, $hide_recipients = false, $f
 function welcome_email($show_default=false) {
 	global $gallery;
 
-	$default=_("Hi !!FULLNAME!!,
+	$default=gTranslate('core', "Hi !!FULLNAME!!,
 
 Congratulations.  You have just been subscribed to %s at %s.  Your account name is !!USERNAME!!.  Please visit the gallery soon, and create a password by clicking this link:
 
@@ -175,9 +180,9 @@ Congratulations.  You have just been subscribed to %s at %s.  Your account name 
 Gallery @ %s Administrator.");
 	if ($show_default) {
 		return sprintf($default,
-		'<b><span style="white-space: nowrap;">&lt;' . _("gallery title") . "&gt;</span></b>",
-		'<b><span style="white-space: nowrap;">&lt;' . _("gallery URL") . "&gt;</span></b>",
-		'<b><span style="white-space: nowrap;">&lt;' . _("gallery title") . "&gt;</span></b>");
+		'<b><span style="white-space: nowrap;">&lt;' . gTranslate('core', "gallery title") . "&gt;</span></b>",
+		'<b><span style="white-space: nowrap;">&lt;' . gTranslate('core', "gallery URL") . "&gt;</span></b>",
+		'<b><span style="white-space: nowrap;">&lt;' . gTranslate('core', "gallery title") . "&gt;</span></b>");
 	} elseif (empty($gallery->app->emailGreeting)) {
 		return sprintf($default,
 		$gallery->app->galleryTitle,
@@ -191,13 +196,13 @@ Gallery @ %s Administrator.");
 
 function welcomeMsgPlaceholderList() {
 	$placeholders = array(
-		'galleryurl' => _("The Url to your Gallery."),
-		'gallerytitle' => _("Title of your Gallery."),
-		'adminemail' => _("Admin email(s)"),
-		'password' => _("Password for the newly created user."),
-		'username' => _("Username"),
-		'fullname' => _("Fullname"),
-		'newpasswordlink' =>  _("Will be replaced by a link the new user can click on to create a new password.")
+		'galleryurl' => gTranslate('core', "The Url to your Gallery."),
+		'gallerytitle' => gTranslate('core', "Title of your Gallery."),
+		'adminemail' => gTranslate('core', "Admin email(s)"),
+		'password' => gTranslate('core', "Password for the newly created user."),
+		'username' => gTranslate('core', "Username"),
+		'fullname' => gTranslate('core', "Fullname"),
+		'newpasswordlink' =>  gTranslate('core', "Will be replaced by a link the new user can click on to create a new password.")
 	);
 
 	return $placeholders;
@@ -235,7 +240,7 @@ function emailComments($id, $comment_text, $commenter_name) {
 	global $gallery;
 
 	$to = $gallery->album->getEmailMeList('comments', $id);
-	$subject = sprintf(_("New comment for %s"), $id);
+	$subject = sprintf(gTranslate('core', "New comment for %s"), $id);
 	$text = '';
 
 	if (!empty($to)) {
@@ -244,19 +249,19 @@ function emailComments($id, $comment_text, $commenter_name) {
 		$text .= "\n  <head>";
 		$text .= "\n  <title>$subject</title>";
 		$text .= "\n  </head>\n<body>\n<p>";
-		$text .= sprintf(_("A new comment has been added to Gallery: %s"), $gallery->app->galleryTitle);
+		$text .= sprintf(gTranslate('core', "A new comment has been added to Gallery: %s"), $gallery->app->galleryTitle);
 		$text .= "\n</p>";
-		$text .= sprintf(_("The comment was added by %s to this %s in this %s."),
+		$text .= sprintf(gTranslate('core', "The comment was added by %s to this %s in this %s."),
 		$commenter_name,
-		'<a href="'. makeAlbumHeaderUrl($gallery->session->albumName, $id) .'">'. _("Item") .'</a>',
-		'<a href="'. makeAlbumHeaderUrl($gallery->session->albumName) .'">'. _("Album") .'</a>');
-		$text .= "\n<br>". _("*** Begin comment ***") ."<br>\n";
+		'<a href="'. makeAlbumHeaderUrl($gallery->session->albumName, $id) .'">'. gTranslate('core', "Item") .'</a>',
+		'<a href="'. makeAlbumHeaderUrl($gallery->session->albumName) .'">'. gTranslate('core', "Album") .'</a>');
+		$text .= "\n<br>". gTranslate('core', "*** Begin comment ***") ."<br>\n";
 		$text .= nl2br($comment_text);
-		$text .= "<br>\n". _("***End comment ***") . "\n<p>\n";
-		$text .= _("If you no longer wish to receive emails about this image, follow the links above and ensure that 'Email me when comments are added' is unchecked in both the photo and album page (You'll need to login first).");
+		$text .= "<br>\n". gTranslate('core', "***End comment ***") . "\n<p>\n";
+		$text .= gTranslate('core', "If you no longer wish to receive emails about this image, follow the links above and ensure that 'Email me when comments are added' is unchecked in both the photo and album page (You'll need to login first).");
 		$text .= "\n</p>\n</body>\n</html>";
 
-		$logmsg = sprintf(_("New comment for %s."), makeAlbumHeaderUrl($gallery->session->albumName, $id));
+		$logmsg = sprintf(gTranslate('core', "New comment for %s."), makeAlbumHeaderUrl($gallery->session->albumName, $id));
 
 		gallery_mail($to, $subject, $text, $logmsg, true, NULL, false, true);
 	}
@@ -266,30 +271,36 @@ function emailLogMessage($logmsg, $result, $isNotifyMail) {
 	global $gallery;
 
 	if (!$result) {
-		$logmsg = sprintf(_("FAILED") ." / FAILED: %s", $logmsg);
+		$logmsg = gTranslate('core', "Sending email failed. Additional info:") . "\n<br>" .
+				  $logmsg;
 	}
+
 	if (isset($gallery->app->email_notification) &&
-	in_array("logfile", $gallery->app->email_notification)) {
+		in_array("logfile", $gallery->app->email_notification))
+	{
 		$logfile = $gallery->app->userDir."/email.log";
 		logMessage($logmsg, $logfile);
 	}
 
 	if (isset($gallery->app->email_notification) &&
-	in_array("email", $gallery->app->email_notification)) {
-		$subject = _("Email activity");
+		in_array("email", $gallery->app->email_notification))
+	{
+		$subject = gTranslate('core', "Email activity");
 		if ($subject != "Email activity") {
 			$subject .= "/Email activity";
 		}
+
 		$subject .= ": ".  $gallery->app->galleryTitle;
 		$subject = unhtmlentities($subject);
 
-		gallery_mail($gallery->app->adminEmail,
-		$subject,
-		$logmsg . emailDisclaimer(),
-		'',
-		false,
-		$gallery->app->senderEmail,
-		true
+		gallery_mail(
+			$gallery->app->adminEmail,
+			$subject,
+			$logmsg . emailDisclaimer(),
+			'',
+			false,
+			$gallery->app->senderEmail,
+			true
 		);
 	}
 }
