@@ -1,3 +1,9 @@
+2007-02-09 Jens Tkotz <jens@peino.de> 1.6-RC1-b26
+
+ * Change: Better Wording and handling for mail in config.
+ 
+ * Change: Better wording for email-errormesages
+ 
 2007-02-08 Jens Tkotz <jens@peino.de> 1.6-RC1-b25
 
  * Fix: Typo in PN Version check.
